# BerserkerQuake2

./: .gitignore  README.md  build-appimage.sh  modelist.txt
.github/workflows/: cibuild.yml
AppImage/: CMakeLists.txt  Makefile
AppImage/App/: .DirIcon  io.github.tx00100xt.BerserkerQuake2.desktop
AppImage/App/usr/share/applications/: io.github.tx00100xt.BerserkerQuake2.desktop
AppImage/App/usr/share/metainfo/: io.github.andrei-drexler.ironwail.appdata.xml
AppImage/Sources/: mainapp.c
AppImage/patches/: 0001-berserkerq2-AppImage.patch
Docs/: Cvars.doc  Mapping.doc  Relight_english.doc  Tex&Mdl.doc  _overview.doc  commands.xls  credits.txt  files.doc  readme.txt  relight.doc
Samples/: dm_hud.txt  q2b_autoexec.cfg  q2b_config.cfg  samples.bat  samples.sh  sp_hud.txt
Samples/Overrides/map1/: con1_1.fx  con1_1.tga  con1_1_dst.tga  wgrate1_1.tga  wgrate1_1_bump.tga
Samples/Overrides/map2/: con1_1.tga  wgrate1_1.fx
Samples/Overrides/map3/: flat1_1.fx  flat1_1.tga
Samples/Overrides/map6/: ceil1_4.fx  ceil1_4.tga  ceil1_4_bump.tga  ceil1_4_light.tga  water1_8.fx  water1_8.tga  wslt1_5.fx  wslt1_5_light.tga
Samples/Overrides/map7/: bluekeypad.fx  bluwter.tga  brwater.fx  brwater.tga  florr2_8.fx  florr2_8.tga  florr2_8_bump.tga  flr1_1.fx  grass1_2.fx  grass1_2.tga  grass1_2_bump.tga  metal3_5.fx  metal3_5.tga  metal3_5_bump.tga  watrt1_1.fx  watrt1_1_bump.tga  watrt2_1.fx  watrt2_1.tga  wndow0_3.fx
Samples/Overrides/map8/: wgrate1_2.fx  wgrate1_2.tga  wgrate1_2_bump.tga
Samples/cache/inv_models/weapons/v_bfg/: tris.md2
Samples/cache/inv_models/weapons/v_blast/: tris.md2
Samples/cache/inv_models/weapons/v_chain/: tris.md2
Samples/cache/inv_models/weapons/v_handgr/: tris.md2
Samples/cache/inv_models/weapons/v_hyperb/: tris.md2
Samples/cache/inv_models/weapons/v_launch/: tris.md2
Samples/cache/inv_models/weapons/v_machn/: tris.md3_0  tris.md3_1  tris.md3_2
Samples/cache/inv_models/weapons/v_rail/: tris.md2
Samples/cache/inv_models/weapons/v_rocket/: tris.md2
Samples/cache/inv_models/weapons/v_shotg/: tris.md2
Samples/cache/inv_models/weapons/v_shotg2/: tris.md3_0
Samples/cache/maps/: base1.bsp  base1.bsp.mem  map1.bsp  map1.bsp.mem  map2.bsp  map2.bsp.mem  map3.bsp  map3.bsp.mem  map4.bsp  map4.bsp.mem  map5.bsp  map5.bsp.mem  map6.bsp  map6.bsp.mem  map7.bsp  map7.bsp.mem  map8.bsp  map8.bsp.mem  map9.bsp  map9.bsp.mem
Samples/cache/models/deadbods/dude/: tris.md2  tris.md2.mem
Samples/cache/models/hud/: a_bullets.md2  a_bullets.md2.mem  a_cells.md2  a_cells.md2.mem  a_grenades.md2  a_grenades.md2.mem  a_rockets.md2  a_rockets.md2.mem  a_shells.md2  a_shells.md2.mem  a_slugs.md2  a_slugs.md2.mem  cyborg.md2  cyborg.md2.mem  female.md2  female.md2.mem  i_airstrike.md2  i_airstrike.md2.mem  i_bodyarmor.md2  i_bodyarmor.md2.mem  i_combatarmor.md2  i_combatarmor.md2.mem  i_health.md2  i_health.md2.mem  i_jacketarmor.md2  i_jacketarmor.md2.mem  i_pack.md2  i_pack.md2.mem  i_powerscreen.md2  i_powerscreen.md2.mem  i_powershield.md2  i_powershield.md2.mem  i_shard.md2  i_shard.md2.mem  k_bluekey.md2  k_bluekey.md2.mem  k_comhead.md2  k_comhead.md2.mem  k_datacd.md2  k_datacd.md2.mem  (+55 more)
Samples/cache/models/items/adrenal/: tris.md2  tris.md2.mem
Samples/cache/models/items/invis/: invis.md3_0  invis.md3_1  invis.md3_2  invis.md3_3
Samples/cache/models/items/silencer/: tris.md2  tris.md2.mem
Samples/cache/models/mapobjects/: fan0.md3_0  fance_01.md3_0
Samples/cache/models/monsters/bitch/: tris.md2
Samples/cache/models/monsters/flyqbe/: flyqbe.ase.mem
Samples/cache/models/monsters/infantry/: tris.md2  tris.md2.mem
Samples/cache/models/monsters/mutant/: tris.md2
Samples/cache/models/monsters/soldier/: tris.md2  tris.md2.mem
Samples/cache/models/shells/: m_shell.md3.mem  m_shell.md3_0  s_shell.md3.mem  s_shell.md3_0
Samples/cache/players/cyborg/: tris.md2  tris.md2.mem
Samples/cache/players/female/: a_grenades.md2  a_grenades.md2.mem  tris.md2  tris.md2.mem  w_bfg.md2  w_bfg.md2.mem  w_blaster.md2  w_blaster.md2.mem  w_chaingun.md2  w_chaingun.md2.mem  w_glauncher.md2  w_glauncher.md2.mem  w_hyperblaster.md2  w_hyperblaster.md2.mem  w_machinegun.md2  w_machinegun.md2.mem  w_railgun.md2  w_railgun.md2.mem  w_rlauncher.md2  w_rlauncher.md2.mem  w_shotgun.md2  w_sshotgun.md2  w_sshotgun.md2.mem  weapon.md2.mem
Samples/cache/players/male/: a_grenades.md2  a_grenades.md2.mem  tris.md2  tris.md2.mem  w_bfg.md2  w_bfg.md2.mem  w_blaster.md2  w_blaster.md2.mem  w_chaingun.md2  w_chaingun.md2.mem  w_glauncher.md2  w_glauncher.md2.mem  w_hyperblaster.md2  w_hyperblaster.md2.mem  w_machinegun.md2  w_machinegun.md2.mem  w_railgun.md2  w_railgun.md2.mem  w_rlauncher.md2  w_rlauncher.md2.mem  w_sshotgun.md2  w_sshotgun.md2.mem  weapon.md2  weapon.md2.mem
Samples/cache/sprites/: s_bfg1.sp3.mem  s_bfg2.sp2.mem  s_bfg3.sp3.mem  s_exp.sp2.mem  s_rlboom.sp2.mem
Samples/cache/sprites/flyqbe/: tele_out.sp3.mem  teleport.sp3.mem
Samples/cache/sprites/laser/: bolt.sp3.mem
Samples/cache/textures/e1u1/: window1.st
Samples/cache/textures/e1u2/: support1_14.st
Samples/demos/: map4.dem
Samples/maps/: map1.bsp  map1.lit  map1.map  map1.txt  map2.bsp  map2.lit  map2.map  map2.txt  map3.bsp  map3.lit  map3.map  map3.txt  map4.bsp  map4.lit  map4.map  map4_5.txt  map5.bsp  map5.map  map6.bsp  map6.lit  map6.map  map6.txt  map7.bsp  map7.lit  map7.map  map7.txt  map8.bsp  map8.map  map8.txt  map9.bsp  map9.lit  map9.map  map9.txt
Samples/models/mapobjects/: fan0.md3  fance_01.md3  rmet03.tga  rmet03_bump.tga
Samples/save.q2b/save0/: game.ssv  server.ssv
Samples/save/current/: game.ssv
Samples/save/save0/: server.ssv
Sources/: CMakeLists.txt  Makefile  appimage.c  compat.h  data.h  defs.h  game.c  main.c  main.h  unpak.c  unpak.h
Sources/lib/x64/: libs.txt
Sources/lib/x86/: libs.txt
Utils/Evolved2Bers/: Evolved2Bers.cpp  stdafx.h
Utils/Wal2TGA/: _wal2tga.bat
Utils/Wal2TGA/Src/: Wal2TGA.cpp  q2pal.h  stdafx.cpp
baseq2/: default.cfg  dm_hud.txt  purepaks.lst  q2b_config.cfg  q2b_default.cfg  sp_hud.txt
(+553 files in other folders)
